# dev-notes

./: .gitignore  TODO.txt  angular.json  jest.config.js  package-lock.json  package.json  tsconfig.json
src/: index.html  styles.scss
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  commands.rs  config.rs  main.rs
src-tauri/src/utils/: auth.rs  cacher.rs  fetcher.rs  mod.rs  writer.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  consts.ts
src/app/mappers/: note.mapper.ts
src/app/services/: note.service.ts
src/app/test/: note.service.spec.ts
src/models/: Note.ts
